Create the page to add a transaction

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
-<h1>NEW CATEGORIE</h1>
+<h1>NEW CATEGORY</h1>
 <%= form_with model: categorie, url: groups_path, method: :post, local: true, scope: :new_categorie do |f| %>
   <div>
     <%= f.text_field :name, placeholder: 'Categorie name' %>
