Add styling to all pages

--- a/app/views/groups/_expenses.html.erb
+++ b/app/views/groups/_expenses.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <p>
+<div class="m-3 p-2 bg-white border border-dark-subtle rounded shadow-sm">
+  <p class="fw-bold">
     <%= expense.name %>
   </p>
 
