--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,11 +1,11 @@
-<section>
-  <div>
-    <%= link_to groups_path do %>
-      <i class="fa-solid fa-chevron-left"></i>
+<section class="w-full bg-light bg-gradient vh-100">
+  <div class="w-screen bg-primary bg-gradient text-2xl text-center text-light py-3 row shadow">
+    <%= link_to groups_path, class:"col" do %>
+      <i class="fa-solid fa-arrow-left text-decoration-none text-light fs-3 w-100 h-100 ps-3 pt-2 text-start"></i>
     <% end %>
-    <h1><%= @category.name %>:<br>Transactions List</h1>
-    <%= link_to destroy_user_session_path, method: :delete do %>
-      <i class="fa-solid fa-right-from-bracket"></i>
+    <h1 class="col align-top">Transactions</h1>
+    <%= link_to destroy_user_session_path, method: :delete, class:"col"  do %>
+      <i class="fa-solid fa-right-from-bracket text-decoration-none text-light fs-3 w-100 h-100 pe-3 pt-2 text-end"></i>
     <% end %>
   </div>
 
@@ -16,8 +16,9 @@
     <p class="alert alert-danger text-center bg-main text-text-light"><%= alert %></p>
   <% end %>
 
-  <div>
-     <p class="font-bold">
+  <div class="m-3 p-2 bg-white border border-dark-subtle rounded shadow-sm">
+    <h3 class="fw-bolder">Category: <%= @category.name %></h3>
+    <p class="fw-semibold">
       Total expenses:
       <%= number_to_currency(@category.operations.sum(:amount)) %>
     </p>
@@ -29,8 +30,8 @@
     <% end %>
   </div>
 
-  <div>
-    <%= link_to 'Add new transaction', new_group_operation_path(@category.id) %>
+  <div class="bg-success fixed-bottom">
+    <%= link_to 'Add new transaction', new_group_operation_path(@category.id), class:"btn btn-outline-light d-grid m-3" %>
   </div>
 </section>
 
