--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
         <button class="btn btn-primary mb-3">START</button>
       <% end %>
       Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to destroy_user_session_path, method: :delete, :class => 'navbar-link vw-100 d-grid gap-1 px-3 text-decoration-none' do %>
+      <%= link_to destroy_user_session_path, data: { turbo_method: :delete } , :class => 'navbar-link vw-100 d-grid gap-1 px-3 text-decoration-none' do %>
         <button class="btn btn-outline-secondary mb-3">LOG OUT</button>
       <% end %>
     <% else %>
